@@ -1,6 +1,8 @@
 VDR Plugin 'streamdev' Revision History
 ---------------------------------------
  
+- more dsyslog messages to help troubleshouting channel switch issues
+- improved the channel switch code trying to move live TV to different card
 - make sure that a client doesn't interrupt replaying on server's FF card
   (reported by wtor)
 - switching away live TV failed even when "always suspended" (reported by
